Update Barbaro.tex with new class features

--- a/Guida.tex
+++ b/Guida.tex
@@ -64,7 +64,7 @@
 
 %\input{data/Personaggi/Artefice.tex}
 
-%\input{data/Personaggi/Barbaro.tex}
+\input{data/Personaggi/Barbaro.tex}
 
 %\input{data/Personaggi/Bardo.tex}
 
