--- a/data/Personaggi/Barbaro.tex
+++ b/data/Personaggi/Barbaro.tex
@@ -1,7 +1,34 @@
 \chapter{Barbaro}
 
+\begin{DndReadAloud}
+    \it
+    "GRRYAAAAAH!" \\ (Anonimo)
+  \end{DndReadAloud}
+
 \section{Privilegi di Classe Opzionali}
 
-\subsection{Difesa senza armatura e soglia di danno}
-\paragraph{Classe armatura}La CA di un Barbaro che non indossa armature è pari a 10 + il suo modificatore di Destrezza + un quarto del suo livello da Barbaro. 
-\paragraph{Soglia di danno}La soglia di danno di un Barbaro che non indossa armature è pari a metà del suo livello da Barbaro + il suo modificatore di Costituzione + il suo bonus di competenza, il tutto diviso per due.
+\section{Cammino Primordiale: Cammino del Caos}
+
+\subsection{Tutto muscoli, tutto cervello}
+A partire dal 3° livello, quando il Barbaro usa il suo privilegio \textit{Ira}, i suoi punteggi di Forza e Intelligenza vengono scambiati se quello di Intelligenza è più alto di quello di Forza.
+
+\subsection{Incantesimi}
+A partire dal 3° livello, il Barbaro acquisisce la capacità di lanciare degli incantesimi.
+\paragraph{Caratteristica da incantatore} La caratteristica da incantatore del Barbaro è Intelligenza.
+\paragraph{Trucchetti} Il Barbaro conosce due trucchetti a scelta dalla lista del Warlock. Al 10° livello ne apprende un terzo sempre dalla lista del Warlock.
+\paragraph{Slot Incantesimo} Ha la stessa tavola di slot del Cavaliere Mistico.
+\paragraph{Incantesimi conosciuti} Il Barbaro può imparare un numero di incantesimi da Warlock pari al suo livello da Barbaro più il suo modificatore di Intelligenza. Inoltre può imparare incantesimi da qualsiasi lista nel momento in cui questi gli siano insegnati.
+
+\subsection{Corpo del Caos}
+A partire dal 6° livello, quando il Barbaro usa il suo privilegio \textit{Ira} trasforma il suo corpo in un vortice di pura energia caotica.\\
+La sua veloità di movimento aumenta di 1.5 metri e diventa una sorgente di luce fioca entro 9 metri.\\
+Inoltre, quando effettua un tiro salvezza su Intelligenza durante la trasformazione, può trattarlo come un tiro salvezza su Forza.
+
+\subsection{Orizzonte degli eventi}
+A partire dal 10° livello, quando il Barbaro usa il suo privilegio \textit{Ira} proietta un campo gravitazionale intorno a sè. Quando una creatura alleata entro 1.5 metri da lui è bersaglio di un tiro a colpire a distanza, può usare la sua reazione per decidere di reindirizzarlo su di sè ma essere sicuramente colpito, riducendo i danni di 1d10 più il suo modificatore di Costituzione. Se i danni vengono ridotti a 0 da questo privilegio, come parte della stessa reazione può lanciare un trucchetto.\\
+Se il Barbaro muore durante la trasformazione, apre un portale verso il Piano Astrale. Il portale origina dal punto in cui un oggetto è stato piazzato all'interno dell'altro. Qualsiasi creatura entro 3 metri dal portale viene risucchiata al suo interno e depositata in un luogo casuale del Piano Astrale. Poi il portale si chiude. Il portale è a senso unico e non può essere riaperto.
+
+\subsection{}
+
+\subsection{Ho detto tutto cervello}
+Quando al 20° livello il Barbaro ottiene l'aumento sia del punteggio che del massimo punteggio di Forza, questo invece va su Intelligenza.
