Update hyperref package in Guida.tex and pdfTeX version in Misteri.log

--- a/Guida.tex
+++ b/Guida.tex
@@ -21,7 +21,7 @@
 \usepackage{shortvrb}
 \usepackage{stfloats}
 \usepackage{amsfonts}
-%\usepackage{hyperref}
+\usepackage{hyperref}
 
 \captionsetup[table]{labelformat=empty,font={sf,sc,bf,},skip=0pt}
 
