--- a/data/Personaggi/Barbaro.tex
+++ b/data/Personaggi/Barbaro.tex
@@ -29,6 +29,7 @@ A partire dal 10° livello, quando il Barbaro usa il suo privilegio \textit{Ira}
 Se il Barbaro muore durante la trasformazione, apre un portale verso il Piano Astrale. Il portale origina dal punto in cui un oggetto è stato piazzato all'interno dell'altro. Qualsiasi creatura entro 3 metri dal portale viene risucchiata al suo interno e depositata in un luogo casuale del Piano Astrale. Poi il portale si chiude. Il portale è a senso unico e non può essere riaperto.
 
 \subsection{}
+A partire dal livello 14, 
 
 \subsection{Ho detto tutto cervello}
 Quando al 20° livello il Barbaro ottiene l'aumento sia del punteggio che del massimo punteggio di Forza, questo invece va su Intelligenza.
