--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -100,6 +100,34 @@ A partire dal 1° livello, l'utilizzatore può far prendere all'anello la forma 
 \subsection{Scudo della Lealtà di Artorias}
 \textit{Amuleto (artefatto) leggendario, richiede sintonia con un Guerriero in grado di trasformarsi in un Lupo}
 
+\subsection{Lama della Distruzione (nome placeholder)}
+\textit{Spada magica a due mani (artefatto) meravigliosa leggendaria, richiede sintonia con un Barbaro del Cammino del Caos}
+
+\subsubsection{Una prima scintilla di magi}
+A partire dal 1° livello, la magia intrisa nella spada le mermette di produrre luce fioca entro 9 metri e di essere utilizzata come focus da incantatore. 
+
+\subsubsection{Rilevatore}
+A partire dal 4° livello, la lama della spada può riusuonare con la magia circostante e permettere al Barbaro di lanciare gli incantesimi \textit{Chiaroveggenza} e \textit{Individuazione del magico} senza consumare slot complessivamente per un numero di volte pari al suo bonus di competenza per riposo breve.
+
+\subsubsection{Punizione del caos}
+A partire dall'8° livello, un numero di volte pari al proprio bonus di competenza per riposo lungo, il Barbaro può lanciare l'incantesimo \textit{Punizione del caos} senza consumare slot, anche se è in ira. 
+
+\subsubsection{Incanlazione magica}
+A partire dal 12° livello, il Barbaro (anche se in ira) può usare la propria azione di attacco per lanciare un trucchetto o un incantesimo che richiedano tiro per colpire attraverso la spada. La caratteristica da incantatore per questi incantesimi è forza. 
+
+\subsubsection{Colpo rotante}
+A partire dal 12° livello, il Barbaro può usare un'azione per imporre ai nemici in portata un tiro salvezza su destrezza, altrimenti subiscono 2d8+palle e vengono allontanati dal Barbaro di 1,5 metri. In caso di successo subiscono solo la metà dei danni.
+
+\subsubsection{Un rifugio sempre a portata di mano}
+A partire dal 16° livello, la Spada può essere piantata a terra, diventando inestraibile. Chiunque provi ad estrarla, fatta eccezione per il possessore, subisce il danno di un attacco ricevuto dalla spada, che tuttavia non può ridurlo a 0 Punti Ferita. Quando la Spada è piantata in questo modo, il possessore può entrarvi e portare con se delle creature consenzienti. I personaggi all'interno della spada sono in un semipiano altrimenti inaccessibile.
+
+\subsubsection{Un rifugio sempre a portata di mano}
+A partire dal 16° livello, un numero di volte pari al proprio modificatore di competenza per riposo lungo, il Barbaro può piantare la Spada a terra e rilasciare un'esplosione di magia del Caos. In questo modo lancia l'incantesimo \textit{Scossa Tellurica} di 5° livello senza consimare slot (anche se in Ira). Il raggio dell'incantesimo è incrementato di 1,5 metri e il terreno diventa difficile a prescindere della composizione, e il Barbaro può decidere di escludere un numero di persone pari al proprio modificatore di forza. 
+
+\subsubsection{Un potente alleato}
+A partire dal 19° livello, l'anima magica della spada può manifestarsi e combattere a fianco del suo Padrone. Essa agisce con una propria iniziativa, ma è controllata dal proprio Padrone. 
+
+
 \section{Oggetti non legati ai personaggi dei giocatori}
 
 \subsection{Errori di battitura}
