--- a/data/Appendice/Creature.tex
+++ b/data/Appendice/Creature.tex
@@ -1,4 +1,4 @@
-\chapter{Creature}
+\nchapter{Creature}
 \begin{DndMonster}[float*=b,width=\textwidth + 8pt]{Anima della Distruzione}
     \begin{multicols}{2}
       \DndMonsterType{Folletto medio, legale malvagio}
