--- a/data/Ipotesi/Azioni.tex
+++ b/data/Ipotesi/Azioni.tex
@@ -1,4 +1,4 @@
-\chapter{Economia delle azioni}
+\nchapter{Economia delle azioni}
 \section{Il Round}
 \DndDropCapLine{L}{}'unità di tempo fondamentale nel gioco è il round. Un round è un periodo di tempo di circa 6 secondi, durante il quale si svolgono "contemporaneamente" tutte le azioni dei personaggi.\\
 
