--- a/data/Personaggi/Barbaro.tex
+++ b/data/Personaggi/Barbaro.tex
@@ -1,4 +1,4 @@
-\chapter{Barbaro}
+\nchapter{Barbaro}
 
 \begin{DndReadAloud}
     \it
@@ -28,8 +28,8 @@ Inoltre, quando effettua un tiro salvezza su Intelligenza durante la trasformazi
 A partire dal 10° livello, quando il Barbaro usa il suo privilegio \textit{Ira} proietta un campo gravitazionale intorno a sè. Quando una creatura alleata entro 1.5 metri da lui è bersaglio di un tiro a colpire a distanza, può usare la sua reazione per decidere di reindirizzarlo su di sè ma essere sicuramente colpito, riducendo i danni di 1d10 più il suo modificatore di Costituzione. Se i danni vengono ridotti a 0 da questo privilegio, come parte della stessa reazione può lanciare un trucchetto.\\
 Se il Barbaro muore durante la trasformazione, apre un portale verso il Piano Astrale. Il portale origina dal punto in cui un oggetto è stato piazzato all'interno dell'altro. Qualsiasi creatura entro 3 metri dal portale viene risucchiata al suo interno e depositata in un luogo casuale del Piano Astrale. Poi il portale si chiude. Il portale è a senso unico e non può essere riaperto.
 
-\subsection{}
-A partire dal livello 14, 
+\subsection{Scarica furiosa}
+A partire dal livello 14, una volta per riposo breve, il Barbaro può usare un'azione per terminare la sua \textit{Ira} in anticipo (ammesso che abbia passato almeno due turni in essa) per lanciare l'incantesimo \textit{Palla di Fuoco} di livello pari a metà dei suoi turni rimanenti (contando quello in cui viene lanciato) più tre. Quando viene lanciato in questo modo, l'incantesimo infligge danni necrotici.
 
 \subsection{Ho detto tutto cervello}
 Quando al 20° livello il Barbaro ottiene l'aumento sia del punteggio che del massimo punteggio di Forza, questo invece va su Intelligenza.
