--- a/data/Personaggi/Sapiente.tex
+++ b/data/Personaggi/Sapiente.tex
@@ -1,4 +1,4 @@
-\chapter{Sapiente}
+\nchapter{Sapiente}
 \textit{Creato da u/LaserLlama, tradotto da Davide Borra e ribilanciato dal sottoscritto}
 
 \subsection{Menti magnifiche}
