--- a/data/Personaggi/Talenti.tex
+++ b/data/Personaggi/Talenti.tex
@@ -1,5 +1,4 @@
-\chapter{Talenti}
-
+\nchapter{Talenti}
 
 \subsection{Campo Soprannaturale}
 \paragraph{Campo Soprannaturale} Fintanto che il personaggio è cosciente, intorno a lui nel raggio di 27 metri sono attivi gli effetti di una \textit{Regione Soprannaturale} a sua scelta determinata tra quelle a pagina 150 del \textit{Calderone Omnicomprensivo di Tasha}, escludendo il \textit{Fulgore Benedetto}, quando acquisisce questo talento.
