Update abilities and descriptions for Cassandra in the LaTeX document

--- a/cassandra.tex
+++ b/cassandra.tex
@@ -75,11 +75,11 @@ A partire dal 8° livello dell'utilizzatore, questi può decidere di alterare al
 
 \subsection{Sguardo pietrificante}
 A partire dal 12° livello dell'utilizzatore, questi può lanciare l'incantesimo \textit{Carne in Pietra} come azione bonus contro un bersaglio che sia in grado di guardare negli occhi pronunciando le opportune parole magiche.\\
-Questo privilegio può essere usato un numero di volte pari al bonus di competenza dell'utilizzatore per riposo lungo.
+Questo privilegio può essere usato un numero di volte pari a metà del bonus di competenza dell'utilizzatore per riposo lungo.
 
 \subsection{Miasma illusorio}
 A partire dal 16° livello dell'utilizzatore, questi può lanciare l'incantesimo \textit{Drago Illusorio} di tipo Veleno per evocare un'ombra del Dalamadur.\\
-Questo privilegio può essere usato un numero di volte pari al bonus di competenza dell'utilizzatore per riposo lungo.
+Questo privilegio può essere usato un numero di volte pari a metà del bonus di competenza dell'utilizzatore per riposo lungo.
 
 \subsection{Il divoratore del mondo}
 A partire dal 19° livello dell'utilizzatore, al più una volta al giorno, questi può usare un'azione per scatenare un'eclissi di sole o di luna (in base all'ora del giorno) ed evocare il vero Dalamadur, richiedendo il suo \textit{Intervento Divino} (senza tirare il dado percentuale).\\
@@ -87,8 +87,7 @@ La natura dell'intervento e il tempo necessario per poterlo chiedere nuovamente 
 Se il Dalamadur non dovesse manifestare la sua forma fisica, lo farebbe attraverso l'ambiente circostante all'utilizzatore (ad esempio le nuvole, l'acqua o la sabbia).
 
 \section{Tradizione monastica: via della Vipera Profeta}
-
-I monaci Ofiti, tenendo fede al pacifismo della loro tradizione, hanno sempre mantenuto uno stile di combattimento basato sulla difesa, detto \textit{stile della Vipera}. Sulla base di questo, Cassandra ha trovato il modo di integrare le sue premonizioni per rendere il suo contrattacco più efficace.
+\DndDropCapLine{I}{} monaci Ofiti, tenendo fede al pacifismo della loro tradizione, hanno sempre mantenuto uno stile di combattimento basato sulla difesa, detto \textit{stile della Vipera}. Sulla base di questo, Cassandra ha trovato il modo di integrare le sue premonizioni per rendere il suo contrattacco più efficace.
 
 \subsection{Profezia}
 A partire dal 3° livello, il Monaco ottiene competenza nell'abilità Intuizione; se la possiede già o la ottiene con altri mezzi, invece di ottenere competenza ottiene maestria.
@@ -97,14 +96,15 @@ A partire dal 3° livello, il Monaco ottiene competenza nell'abilità Intuizione
 A partire dal 3° livello, il Monaco ottiene una reazione aggiuntiva per round (un singolo effetto può scatenare una singola reazione).\\
 Ne ottiene un'altra all'11° e un'altra ancora al 17°, per un totale di 4 reazioni per round.
 
-\subsection{Arti marziali migliorate}
+\subsection{Arti marziali difensive}
 A partire dal 6° livello, quando una creatura che può vedere compie un attacco da mischia contro il Monaco, questi può usare la sua reazione e un punto ki per lanciare il proprio Dado da Monaco e aggiungere il suo risultato alla propria Classe Armatura contro quell'attacco. Se l'attacco manca, il Monaco può contrattaccare con un tiro per colpire come parte della stessa reazione.
 
 \subsection{}
 
+
 \subsection{Doom-driven warrior}
 Come culmine della propria abilità, il Monaco ha una conoscenza così profonda dei fili del destino da poter dirigere il flusso del fato a suo piacimento intorno a sè.\\
-A partire dal 17° livello, il Monaco può spendere 4 punti ki per lanciare uno dei seguenti incantesimi con le opportune modifiche:\begin{itemize}
+A partire dal 17° livello, il Monaco può spendere un numero di punti ki pari al livello dell'incantesimo per lanciare uno dei seguenti incantesimi con le opportune modifiche:\begin{itemize}
     \item \textit{Time Ravage} ma come effetto su un colpo senz'armi;\\
     \item \textit{Fatale} ma attingendo ai momenti più traumatici della vita passata o futura dei bersagli;\\
     \item \textit{Previsione} ma solo su sè stesso;\\
