--- a/WarlockcComunisci.tex
+++ b/WarlockcComunisci.tex
@@ -61,7 +61,7 @@ La conoscenza della Geometria Proiettiva permette al Warlock di poter scegliere 
 \subsection{Forma lineare associata}
 A partire dal 1° livello, una volta per riposo lungo, il Warlock può indicare una creatura che sia in grado di vedere. Con un'azione può azzerare il bonus del tiro per colpire di quella creatura fino all'inizio del proprio prossimo turno.
 
-\subsection{Omogeneizzazione}
+\subsection{Spazio all'infinito}
 A partire dal 6° livello, un numero di volte pari al suo bonus di competenza per riposo lungo, quando una creatura è a terra con 0 punti ferita, il Warlock può usare la sua azione e toccarla per trasferirla in un semipiano temporaneo. \\ 
 Finchè la creatura si trova nel semipiano, il Warlock ha a sua disposizione uno slot incantesimo aggiuntivo. Quando il Warlock inizia un riposo breve o usa questo privilegio su un'altra creatura, la creatura intrappolata viene liberata e diventa stabile.
 
