Update Cassandra's abilities and sections in the LaTeX document

--- a/cassandra.tex
+++ b/cassandra.tex
@@ -86,30 +86,35 @@ A partire dal 19° livello dell'utilizzatore, al più una volta al giorno, quest
 La natura dell'intervento e il tempo necessario per poterlo chiedere nuovamente sono determinati dal DM.\\
 Se il Dalamadur non dovesse manifestare la sua forma fisica, lo farebbe attraverso l'ambiente circostante all'utilizzatore (ad esempio le nuvole, l'acqua o la sabbia).
 
-\section{Tradizione monastica: via della Vipera Profeta}
+\section{Tradizione monastica: via della Vipera Veggente}
 \DndDropCapLine{I}{} monaci Ofiti, tenendo fede al pacifismo della loro tradizione, hanno sempre mantenuto uno stile di combattimento basato sulla difesa, detto \textit{stile della Vipera}. Sulla base di questo, Cassandra ha trovato il modo di integrare le sue premonizioni per rendere il suo contrattacco più efficace.
 
 \subsection{Profezia}
-A partire dal 3° livello, il Monaco ottiene competenza nell'abilità Intuizione; se la possiede già o la ottiene con altri mezzi, invece di ottenere competenza ottiene maestria.
-
-\subsection{Riflessi}
-A partire dal 3° livello, il Monaco ottiene una reazione aggiuntiva per round (un singolo effetto può scatenare una singola reazione).\\
-Ne ottiene un'altra all'11° e un'altra ancora al 17°, per un totale di 4 reazioni per round.
+A partire dal 3° livello, il Monaco ottiene competenza nelle abilità Intuizione e Percezione; se la possiede già o la ottiene con altri mezzi, invece di ottenere competenza ottiene maestria.
 
 \subsection{Arti marziali difensive}
-A partire dal 6° livello, quando una creatura che può vedere compie un attacco da mischia contro il Monaco, questi può usare la sua reazione e un punto ki per lanciare il proprio Dado da Monaco e aggiungere il suo risultato alla propria Classe Armatura contro quell'attacco. Se l'attacco manca, il Monaco può contrattaccare con un tiro per colpire come parte della stessa reazione.
+A partire dal 3° livello, quando una creatura che può vedere compie un attacco da mischia contro il Monaco, questi può usare la sua reazione e un punto ki per lanciare il proprio Dado da Monaco e aggiungere il suo risultato alla propria Classe Armatura contro quell'attacco. Se l'attacco manca, il Monaco può contrattaccare con un tiro per colpire come parte della stessa reazione.
 
-\subsection{}
+\subsection{Riflessi amplificati}
+A partire dal 6° livello, il Monaco ottiene una reazione aggiuntiva per round (un singolo effetto può scatenare una singola reazione).\\
+Ne ottiene un'altra all'11° e un'altra ancora al 17°, per un totale di 4 reazioni per round.
 
+\subsection{Mano del Destino}
+A partire dall'11° livello, il Monaco può usare la sua azione bonus per scegliere fino a tre creature nel raggio di 18m e spendere due punti ki per la prima e uno per ciascuna delle altre due per provare a modificare il loro fato.\\
+Esse effettuano un Tiro Salvezza su Saggezza e in caso di fallimento, fino all'inizio del prossimo turno del Monaco esse saranno obbligate a tentare di attaccarlo senza utilizzare incantesimi.
 
-\subsection{Doom-driven warrior}
-Come culmine della propria abilità, il Monaco ha una conoscenza così profonda dei fili del destino da poter dirigere il flusso del fato a suo piacimento intorno a sè.\\
-A partire dal 17° livello, il Monaco può spendere un numero di punti ki pari al livello dell'incantesimo per lanciare uno dei seguenti incantesimi con le opportune modifiche:\begin{itemize}
-    \item \textit{Time Ravage} ma come effetto su un colpo senz'armi;\\
-    \item \textit{Fatale} ma attingendo ai momenti più traumatici della vita passata o futura dei bersagli;\\
-    \item \textit{Previsione} ma solo su sè stesso;\\
-    \item \textit{Fermare il Tempo};
-\end{itemize}
+\begin{DndReadAloud}
+  \it
+  Le pergamene del destino si dispiegano davanti ai miei occhi: dalla prima nascita all'ultima morte, dalla prima alba all'ultimo tramonto, dalla prima brezza all'ultimo uragano, io vedo tutto.\\
+  Tu non vivrai per vedere il domani.
+\end{DndReadAloud}
 
+\subsection{Avatar del Fato}
+A partire dal 17° livello, il Monaco può spendere tutti i suoi punti Ki quanto tira per iniziativa per concentrarsi ed entrare completamente in sintonia con lo scorrere del destino per ottenere questi privilegi fino alla fine del combattimento:
+\paragraph{Ineluttabile} I privilegi \textit{Arti marziali difensive} e \textit{Mano del Destino} non richiedono punti ki per essere utilizzati;
+\paragraph{Instancabile} Ogni volta che tira il suo dado da Monaco per aumentare la sua CA, ottiene un numero di punti ki o punti ferita temporanei pari il risultato del dado; questi punti ferita temporanei durano fino alla sua prossima meditazione;
+\paragraph{Crudele} Quando contrattacca con il privilegio "arti marziali difensive", può spendere fino a 5 punti ki per estrarre dal passato o dal futuro del bersaglio degli eventi traumatici e proiettarli nella sua mente per infliggergli un numero di dadi da Monaco pari al numero di punti ki spesi più uno in danni psichici. In questo stato, il Monaco non è in grado di infliggere danni non letali e considera come "fine del combattimento" la morte delle creature ostili o il compimento di un loro destino specificato dal DM.
+\paragraph{Sovraumano} Il monaco può spendere 9 punti ki per lanciare l'incantesimo "Fatale" usando gli eventi traumatici dal passato o dal futuro dei bersagli al posto delle loro paure.
+\paragraph{Principio di Onniscenza Limitata} Fintanto che è in questo stato, il Monaco possiede un'istintiva e completa conoscenza del destino di ogni creatura che è in grado di vedere. Quando esce da questo stato, perde ogni ricordo di ciò che è successo durante il combattimento, ma nel suo subconscio possono rimanere alcuni stralci di visione o le emozioni che possono aver suscitato in lui.
 
 \end{document}
